fix animation on safari

--- a/public/assets/stylesheet.css
+++ b/public/assets/stylesheet.css
@@ -25,7 +25,7 @@ html {
 
 body {
   font-family: "Source Sans Pro", sans-serif;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 /* Begin helpers */
